files added and html, css, js files are updated

--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Capture Mood with Spotify</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-
+        <nav>
+            <div id="nav-display">
+                <a href="#"><img src="svgs/spotify-svgrepo-com.svg" alt="Spotify logo with a white fill" width="32px" /></a>
+                <a><img src="svgs/hamburger-menu-more-svgrepo-com.svg" alt="hamburger menu" width="24px" /></a>
+            </div>
+            <ul class="hidden">
+                <li>Log in</li>
+                <li>Sign up</li>
+                <li>Premium</li>
+                <li>Help</li>
+                <li>Download</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+            </ul>
     </header>
     <main>
-
+        <div id="quiz-holder"></div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
