json files added, js is modified to render buttons clickable and bubbles animation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             </ul>
     </header>
     <main>
-        <div id="quiz-holder"></div>
+        <div id="quiz-holder" class="transparent"></div>
+        <div id="bubbles-holder" class="transparent">
+            <div id="quadrant1"></div>
+            <div id="quadrant2"></div>
+            <div id="quadrant3"></div>
+            <div id="quadrant4"></div>
+        </div>
     </main>
     <footer>
 
