--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capture Mood with Spotify</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- jQuery UI -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js" defer></script>
 
 </head>
@@ -30,9 +32,25 @@
             </ul>
     </header>
     <main>
-        <section id="main-content">
-            <div id="quiz-holder" class="transparent"></div>
-        </section>
+        <section id="main-content"></section>
+        <!-- <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div>1</div>
+              </div>
+              <div class="swiper-slide">
+                <div>2</div>
+              </div>
+              <div class="swiper-slide">
+                <div>3</div>
+              </div>
+            </div>
+          
+            <div class="swiper-pagination"></div>
+          
+            <button type="button" class="swiper-button-prev"></button>
+            <button type="button" class="swiper-button-next"></button>
+          </div> -->
         <div id="bubbles-holder" class="transparent">
             <div id="quadrant1"></div>
             <div id="quadrant2"></div>
