smoothed transition and added a carousel in the result page

--- a/index.html
+++ b/index.html
@@ -33,33 +33,15 @@
     </header>
     <main>
         <section id="main-content"></section>
-        <!-- <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div>1</div>
-              </div>
-              <div class="swiper-slide">
-                <div>2</div>
-              </div>
-              <div class="swiper-slide">
-                <div>3</div>
-              </div>
-            </div>
-          
-            <div class="swiper-pagination"></div>
-          
-            <button type="button" class="swiper-button-prev"></button>
-            <button type="button" class="swiper-button-next"></button>
-          </div> -->
-        <div id="bubbles-holder" class="transparent">
+        <section id="bubbles-holder" class="transparent">
             <div id="quadrant1"></div>
             <div id="quadrant2"></div>
             <div id="quadrant3"></div>
             <div id="quadrant4"></div>
-        </div>
+        </section>
     </main>
     <footer>
-
+        <small>&copy; 2025 Spotify</small>
     </footer>
 </body>
 </html>
