scripts.js is obfuscated now

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
         <nav>
             <div id="nav-display">
-                <a href="#"><img src="svgs/spotify-svgrepo-com.svg" alt="Spotify logo with a white fill" width="32px" /></a>
-                <a><img src="svgs/hamburger-menu-more-svgrepo-com.svg" alt="hamburger menu" width="24px" /></a>
+                <div id="back-to-intro"><img src="svgs/spotify-svgrepo-com.svg" alt="Spotify logo with a white fill" width="32px" /></div>
+                <div><img src="svgs/hamburger-menu-more-svgrepo-com.svg" alt="hamburger menu" width="24px" /></div>
             </div>
             <ul class="hidden">
                 <li>Log in</li>
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section id="main-content"></section>
-        <section id="bubbles-holder" class="transparent">
+        <section id="bubbles-holder">
             <div id="quadrant1"></div>
             <div id="quadrant2"></div>
             <div id="quadrant3"></div>
